--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "sass": "^1.68.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
