--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.15.0",
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.5.0",
+    "firebase-functions-test": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "eslint": "^8.36.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.32.2",
     "stylelint": "^15.2.0",
     "stylelint-config-standard": "^30.0.1"
